--- a/email-parser-stack/email-parser-stack.cabal
+++ b/email-parser-stack/email-parser-stack.cabal
@@ -22,7 +22,7 @@ library
                      , directory
   default-language:    Haskell2010
 
-executable email-parser-stack-exe
+executable email-parser
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
