--- a/email-parser-stack/email-parser-stack.cabal
+++ b/email-parser-stack/email-parser-stack.cabal
@@ -29,6 +29,7 @@ executable email-parser
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , email-parser-stack
+                     , containers >= 0.5
   default-language:    Haskell2010
 
 test-suite email-parser-stack-test
