--- a/email-parser-stack/email-parser-stack.cabal
+++ b/email-parser-stack/email-parser-stack.cabal
@@ -30,6 +30,8 @@ executable email-parser
   build-depends:       base
                      , email-parser-stack
                      , containers >= 0.5
+                     , threepenny-gui
+                     , safe
   default-language:    Haskell2010
 
 test-suite email-parser-stack-test
